[package]
name = "mini-diffusion"
version = "0.1.0"
edition = "2021"
description = "A minimal diffusion model built from scratch in Rust for educational purposes"
license = "MIT"
authors = ["Daniel Sobrado"]

[dependencies]
ndarray = "0.15"
ndarray-rand = "0.14"
rand = "0.8"
rand_distr = "0.4"
image = { version = "0.24", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"

[dev-dependencies]

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "generate"
path = "src/bin/generate.rs"

[[bin]]
name = "demo_sd3"
path = "src/bin/demo_sd3.rs"
