[package]
name = "mini-nn"
version = "0.1.0"
edition = "2021"
description = "A minimal neural network implementation in Rust, built from scratch for educational purposes"
license = "MIT"
authors = ["Daniel Sobrado"]
repository = "https://github.com/danielsobrado/ml-animations/tree/main/mini-nn"
keywords = ["neural-network", "deep-learning", "machine-learning", "educational", "rust"]
categories = ["science", "mathematics"]

[dependencies]
ndarray = "0.15"
ndarray-rand = "0.14"
rand = "0.8"
rand_distr = "0.4"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.17"

[[bin]]
name = "train_titanic"
path = "src/bin/train_titanic.rs"

[[bin]]
name = "demo_xor"
path = "src/bin/demo_xor.rs"

[[bin]]
name = "demo_regression"
path = "src/bin/demo_regression.rs"

[[bin]]
name = "demo_layers"
path = "src/bin/demo_layers.rs"

[profile.release]
opt-level = 3
lto = true
